# pretix-google-events-sd

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: release.yml  style.yml  tests.yml
pretix_google_events/: apps.py  signals.py  urls.py  views.py
pretix_google_events/locale/de_Informal/LC_MESSAGES/: django.po
pretix_google_events/templates/pretix_google_events/: settings.html
tests/: test_main.py
